// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2-level deep nested element Resolves array of nodes match snapshot 1`] = `
Array [
  "div",
  Object {
    "children": Array [
      1,
      2,
      3,
    ],
  },
]
`;

exports[`2-level deep nested element Resolves text nodes match snapshot 1`] = `
Array [
  "h1",
  Object {
    "children": Array [
      "hello ",
      Array [
        "span",
        Object {
          "children": Array [
            "my",
          ],
        },
      ],
      Array [
        "h2",
        Object {
          "children": Array [
            "world",
          ],
        },
      ],
      "friend",
    ],
  },
]
`;

exports[`2-level deep nested element match snapshot 1`] = `
Array [
  "main",
  Object {
    "children": Array [
      Array [
        "header",
        Object {
          "children": Array [
            Array [
              "h1",
              Object {
                "children": Array [
                  "hello",
                ],
              },
            ],
            Array [
              "h2",
              Object {
                "children": Array [
                  "world",
                ],
              },
            ],
          ],
        },
      ],
    ],
  },
]
`;

exports[`Basic single element match snapshot 1`] = `
Array [
  "h1",
  Object {
    "children": Array [
      "hello",
    ],
  },
]
`;

exports[`Basic single element match snapshot 2`] = `
Array [
  "h1",
  Object {
    "children": Array [
      "hello",
    ],
  },
]
`;
